syntax = "proto3";

import "logika/resources/enums.proto";

package logika;

message ArchiveTypes
{
    repeated ArchiveType types = 1;
}

message ArchiveType
{
    ArchiveTypeEnum type = 1;
    string description = 2;
    optional string comment = 3;
}
